# zlib-enum

./: LICENSE  test.hs  zlib-enum.cabal
Codec/Zlib/: Enum.hs
