name:           zlib-enum
version:        0.2.3.1
license:        MIT
license-file:   LICENSE
author:         Paulo Tanimoto <ptanimoto@gmail.com>
maintainer:     Malte Sommerkorn <malte.sommerkorn@googlemail.com>
synopsis:       Enumerator interface for zlib compression
description:    zlib-enum is a stop-gap package to provide enumeratees for
                zlib compression/decompression.
category:       Codec, Compression, Enumerator
stability:      Experimental
cabal-version:  >= 1.8
build-type:     Simple
homepage:       http://github.com/maltem/zlib-enum

--------------------------------------------------------------------------------
library
    build-depends: base                  >= 4   && < 5
                 , bytestring            >= 0.9 && < 0.11
                 , transformers          >= 0.2 && < 0.5
                 , enumerator            == 0.4.*
                 , zlib-bindings         == 0.1.*
    exposed-modules: Codec.Zlib.Enum
    ghc-options:     -Wall

-------------------------------------------------------------------------------
test-suite zlib-enum-test
    type:    exitcode-stdio-1.0
    main-is: test.hs
    build-depends:
          base                       >= 4.0      &&   < 5.0
        , bytestring                 >= 0.9      &&   < 0.11
        , transformers               >= 0.2      &&   < 0.5
        , enumerator                 == 0.4.*
        , zlib-bindings              == 0.1.*
        , test-framework             >= 0.6      &&   < 0.9
        , test-framework-quickcheck2 >= 0.2.12.1 &&   < 0.4
        , QuickCheck                 >= 2.4      &&   < 2.8
    ghc-options:     -Wall

-------------------------------------------------------------------------------
source-repository head
  type:     git
  location: git://github.com/maltem/zlib-enum.git
